test/sema/explicitly-typed-variable.delta.output
explicitly-typed-variable.delta:5:13: error: cannot assign 'bool' to 'int'
    int i = false;
            ^
