test/sema/explicitly-typed-variable.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: cannot assign 'bool' to 'int'
    int i = false;
}
